# wasm-fiddle

./: .gitignore  Cargo.toml  LICENSE  README.md
consumption/package/: index.html  index.js  package-lock.json  package.json
consumption/web/: index.html  index.js  package.json
src/: lib.rs
