[package]
name = "wasm-test"
version = "0.1.0"
authors = ["Marco Beier <marco-beier@t-online.de>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/wridgeu/wasm-test"
keywords = [ "test", "learning-by-doing", "rust", "wasm", "js" ]
edition = "2021"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"